// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data with comparison returns the right data for current and previous periods 5`] = `
Object {
  "currentPeriod": Object {
    "512388b65878b1ed410e7a85e793878bb4bd6a4e1943db6d12ca12dd4286623a": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 0.002,
        },
        Object {
          "x": 1627886880000,
          "y": 0.0015,
        },
        Object {
          "x": 1627886940000,
          "y": 0.002,
        },
        Object {
          "x": 1627887000000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887060000,
          "y": 0.002,
        },
        Object {
          "x": 1627887120000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887180000,
          "y": 0.002,
        },
        Object {
          "x": 1627887240000,
          "y": 0.002,
        },
        Object {
          "x": 1627887300000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887360000,
          "y": 0.002,
        },
        Object {
          "x": 1627887420000,
          "y": 0.0025,
        },
        Object {
          "x": 1627887480000,
          "y": 0.003,
        },
        Object {
          "x": 1627887540000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887600000,
          "y": 0.002,
        },
        Object {
          "x": 1627887660000,
          "y": 0.002,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 0,
        },
        Object {
          "x": 1627886880000,
          "y": 0.05,
        },
        Object {
          "x": 1627886940000,
          "y": 0.0232558139534884,
        },
        Object {
          "x": 1627887000000,
          "y": 0,
        },
        Object {
          "x": 1627887060000,
          "y": 0.0303030303030303,
        },
        Object {
          "x": 1627887120000,
          "y": 0,
        },
        Object {
          "x": 1627887180000,
          "y": 0.0263157894736842,
        },
        Object {
          "x": 1627887240000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1627887300000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1627887360000,
          "y": 0,
        },
        Object {
          "x": 1627887420000,
          "y": 0,
        },
        Object {
          "x": 1627887480000,
          "y": 0.0303030303030303,
        },
        Object {
          "x": 1627887540000,
          "y": 0.0833333333333333,
        },
        Object {
          "x": 1627887600000,
          "y": 0,
        },
        Object {
          "x": 1627887660000,
          "y": 0.05,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 48115.6666666667,
        },
        Object {
          "x": 1627886880000,
          "y": 29247,
        },
        Object {
          "x": 1627886940000,
          "y": 15612.8666666667,
        },
        Object {
          "x": 1627887000000,
          "y": 10279,
        },
        Object {
          "x": 1627887060000,
          "y": 39608.8461538462,
        },
        Object {
          "x": 1627887120000,
          "y": 13255,
        },
        Object {
          "x": 1627887180000,
          "y": 8620.53846153846,
        },
        Object {
          "x": 1627887240000,
          "y": 10015,
        },
        Object {
          "x": 1627887300000,
          "y": 19615,
        },
        Object {
          "x": 1627887360000,
          "y": 19455,
        },
        Object {
          "x": 1627887420000,
          "y": 15950.0588235294,
        },
        Object {
          "x": 1627887480000,
          "y": 17303,
        },
        Object {
          "x": 1627887540000,
          "y": 768897.4,
        },
        Object {
          "x": 1627887600000,
          "y": 12341.1538461538,
        },
        Object {
          "x": 1627887660000,
          "y": 12465.9090909091,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 0.784351348876953,
        },
        Object {
          "x": 1627886880000,
          "y": 0.784622192382813,
        },
        Object {
          "x": 1627886940000,
          "y": 0.785224914550781,
        },
        Object {
          "x": 1627887000000,
          "y": 0.785545349121094,
        },
        Object {
          "x": 1627887060000,
          "y": 0.785938262939453,
        },
        Object {
          "x": 1627887120000,
          "y": 0.786300659179688,
        },
        Object {
          "x": 1627887180000,
          "y": 0.786895751953125,
        },
        Object {
          "x": 1627887240000,
          "y": 0.787326812744141,
        },
        Object {
          "x": 1627887300000,
          "y": 0.787448883056641,
        },
        Object {
          "x": 1627887360000,
          "y": 0.787872314453125,
        },
        Object {
          "x": 1627887420000,
          "y": 0.788345336914063,
        },
        Object {
          "x": 1627887480000,
          "y": 0.788974761962891,
        },
        Object {
          "x": 1627887540000,
          "y": 0.789325714111328,
        },
        Object {
          "x": 1627887600000,
          "y": 0.789802551269531,
        },
        Object {
          "x": 1627887660000,
          "y": 0.790248870849609,
        },
      ],
      "serviceNodeName": "512388b65878b1ed410e7a85e793878bb4bd6a4e1943db6d12ca12dd4286623a",
      "throughput": Array [
        Object {
          "x": 1627886760000,
          "y": 0,
        },
        Object {
          "x": 1627886820000,
          "y": 31,
        },
        Object {
          "x": 1627886880000,
          "y": 20,
        },
        Object {
          "x": 1627886940000,
          "y": 43,
        },
        Object {
          "x": 1627887000000,
          "y": 25,
        },
        Object {
          "x": 1627887060000,
          "y": 33,
        },
        Object {
          "x": 1627887120000,
          "y": 28,
        },
        Object {
          "x": 1627887180000,
          "y": 38,
        },
        Object {
          "x": 1627887240000,
          "y": 13,
        },
        Object {
          "x": 1627887300000,
          "y": 13,
        },
        Object {
          "x": 1627887360000,
          "y": 13,
        },
        Object {
          "x": 1627887420000,
          "y": 46,
        },
        Object {
          "x": 1627887480000,
          "y": 33,
        },
        Object {
          "x": 1627887540000,
          "y": 24,
        },
        Object {
          "x": 1627887600000,
          "y": 44,
        },
        Object {
          "x": 1627887660000,
          "y": 40,
        },
      ],
    },
  },
  "previousPeriod": Object {
    "512388b65878b1ed410e7a85e793878bb4bd6a4e1943db6d12ca12dd4286623a": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 0.0015,
        },
        Object {
          "x": 1627886880000,
          "y": 0.0015,
        },
        Object {
          "x": 1627886940000,
          "y": 0.001,
        },
        Object {
          "x": 1627887000000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887060000,
          "y": 0.002,
        },
        Object {
          "x": 1627887120000,
          "y": 0.002,
        },
        Object {
          "x": 1627887180000,
          "y": 0.001,
        },
        Object {
          "x": 1627887240000,
          "y": 0.001,
        },
        Object {
          "x": 1627887300000,
          "y": 0.002,
        },
        Object {
          "x": 1627887360000,
          "y": 0.0025,
        },
        Object {
          "x": 1627887420000,
          "y": 0.002,
        },
        Object {
          "x": 1627887480000,
          "y": 0.002,
        },
        Object {
          "x": 1627887540000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887600000,
          "y": 0.002,
        },
        Object {
          "x": 1627887660000,
          "y": 0.002,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 0,
        },
        Object {
          "x": 1627886880000,
          "y": 0.0689655172413793,
        },
        Object {
          "x": 1627886940000,
          "y": 0,
        },
        Object {
          "x": 1627887000000,
          "y": 0.0714285714285714,
        },
        Object {
          "x": 1627887060000,
          "y": 0.0408163265306122,
        },
        Object {
          "x": 1627887120000,
          "y": 0,
        },
        Object {
          "x": 1627887180000,
          "y": 0,
        },
        Object {
          "x": 1627887240000,
          "y": 0.0666666666666667,
        },
        Object {
          "x": 1627887300000,
          "y": 0.0416666666666667,
        },
        Object {
          "x": 1627887360000,
          "y": 0,
        },
        Object {
          "x": 1627887420000,
          "y": 0.0909090909090909,
        },
        Object {
          "x": 1627887480000,
          "y": 0,
        },
        Object {
          "x": 1627887540000,
          "y": 0,
        },
        Object {
          "x": 1627887600000,
          "y": 0.0740740740740741,
        },
        Object {
          "x": 1627887660000,
          "y": 0.0588235294117647,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 16826.2,
        },
        Object {
          "x": 1627886880000,
          "y": 11181.9333333333,
        },
        Object {
          "x": 1627886940000,
          "y": 6869,
        },
        Object {
          "x": 1627887000000,
          "y": 15775,
        },
        Object {
          "x": 1627887060000,
          "y": 14656.8823529412,
        },
        Object {
          "x": 1627887120000,
          "y": 13695,
        },
        Object {
          "x": 1627887180000,
          "y": 11881.6666666667,
        },
        Object {
          "x": 1627887240000,
          "y": 54876,
        },
        Object {
          "x": 1627887300000,
          "y": 18301.8571428571,
        },
        Object {
          "x": 1627887360000,
          "y": 12041.6666666667,
        },
        Object {
          "x": 1627887420000,
          "y": 14476.3333333333,
        },
        Object {
          "x": 1627887480000,
          "y": 7716.09090909091,
        },
        Object {
          "x": 1627887540000,
          "y": 13343,
        },
        Object {
          "x": 1627887600000,
          "y": 16689.6666666667,
        },
        Object {
          "x": 1627887660000,
          "y": 9251.57142857143,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627886760000,
          "y": null,
        },
        Object {
          "x": 1627886820000,
          "y": 0.778068542480469,
        },
        Object {
          "x": 1627886880000,
          "y": 0.778884887695313,
        },
        Object {
          "x": 1627886940000,
          "y": 0.779270172119141,
        },
        Object {
          "x": 1627887000000,
          "y": 0.779457092285156,
        },
        Object {
          "x": 1627887060000,
          "y": 0.780101776123047,
        },
        Object {
          "x": 1627887120000,
          "y": 0.780509948730469,
        },
        Object {
          "x": 1627887180000,
          "y": 0.78082275390625,
        },
        Object {
          "x": 1627887240000,
          "y": 0.781112670898438,
        },
        Object {
          "x": 1627887300000,
          "y": 0.781364440917969,
        },
        Object {
          "x": 1627887360000,
          "y": 0.781959533691406,
        },
        Object {
          "x": 1627887420000,
          "y": 0.782733917236328,
        },
        Object {
          "x": 1627887480000,
          "y": 0.783084869384766,
        },
        Object {
          "x": 1627887540000,
          "y": 0.783279418945313,
        },
        Object {
          "x": 1627887600000,
          "y": 0.783649444580078,
        },
        Object {
          "x": 1627887660000,
          "y": 0.784149169921875,
        },
      ],
      "serviceNodeName": "512388b65878b1ed410e7a85e793878bb4bd6a4e1943db6d12ca12dd4286623a",
      "throughput": Array [
        Object {
          "x": 1627886760000,
          "y": 0,
        },
        Object {
          "x": 1627886820000,
          "y": 31,
        },
        Object {
          "x": 1627886880000,
          "y": 29,
        },
        Object {
          "x": 1627886940000,
          "y": 15,
        },
        Object {
          "x": 1627887000000,
          "y": 14,
        },
        Object {
          "x": 1627887060000,
          "y": 49,
        },
        Object {
          "x": 1627887120000,
          "y": 21,
        },
        Object {
          "x": 1627887180000,
          "y": 28,
        },
        Object {
          "x": 1627887240000,
          "y": 15,
        },
        Object {
          "x": 1627887300000,
          "y": 24,
        },
        Object {
          "x": 1627887360000,
          "y": 36,
        },
        Object {
          "x": 1627887420000,
          "y": 44,
        },
        Object {
          "x": 1627887480000,
          "y": 28,
        },
        Object {
          "x": 1627887540000,
          "y": 14,
        },
        Object {
          "x": 1627887600000,
          "y": 27,
        },
        Object {
          "x": 1627887660000,
          "y": 34,
        },
      ],
    },
  },
}
`;

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data without comparison returns the right data 3`] = `
Object {
  "currentPeriod": Object {
    "512388b65878b1ed410e7a85e793878bb4bd6a4e1943db6d12ca12dd4286623a": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627885860000,
          "y": null,
        },
        Object {
          "x": 1627885920000,
          "y": 0.0015,
        },
        Object {
          "x": 1627885980000,
          "y": 0.0015,
        },
        Object {
          "x": 1627886040000,
          "y": 0.001,
        },
        Object {
          "x": 1627886100000,
          "y": 0.0015,
        },
        Object {
          "x": 1627886160000,
          "y": 0.002,
        },
        Object {
          "x": 1627886220000,
          "y": 0.002,
        },
        Object {
          "x": 1627886280000,
          "y": 0.001,
        },
        Object {
          "x": 1627886340000,
          "y": 0.001,
        },
        Object {
          "x": 1627886400000,
          "y": 0.002,
        },
        Object {
          "x": 1627886460000,
          "y": 0.0025,
        },
        Object {
          "x": 1627886520000,
          "y": 0.002,
        },
        Object {
          "x": 1627886580000,
          "y": 0.002,
        },
        Object {
          "x": 1627886640000,
          "y": 0.0015,
        },
        Object {
          "x": 1627886700000,
          "y": 0.002,
        },
        Object {
          "x": 1627886760000,
          "y": 0.002,
        },
        Object {
          "x": 1627886820000,
          "y": 0.002,
        },
        Object {
          "x": 1627886880000,
          "y": 0.0015,
        },
        Object {
          "x": 1627886940000,
          "y": 0.002,
        },
        Object {
          "x": 1627887000000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887060000,
          "y": 0.002,
        },
        Object {
          "x": 1627887120000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887180000,
          "y": 0.002,
        },
        Object {
          "x": 1627887240000,
          "y": 0.002,
        },
        Object {
          "x": 1627887300000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887360000,
          "y": 0.002,
        },
        Object {
          "x": 1627887420000,
          "y": 0.0025,
        },
        Object {
          "x": 1627887480000,
          "y": 0.003,
        },
        Object {
          "x": 1627887540000,
          "y": 0.0015,
        },
        Object {
          "x": 1627887600000,
          "y": 0.002,
        },
        Object {
          "x": 1627887660000,
          "y": 0.002,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627885860000,
          "y": null,
        },
        Object {
          "x": 1627885920000,
          "y": 0,
        },
        Object {
          "x": 1627885980000,
          "y": 0.0689655172413793,
        },
        Object {
          "x": 1627886040000,
          "y": 0,
        },
        Object {
          "x": 1627886100000,
          "y": 0.0714285714285714,
        },
        Object {
          "x": 1627886160000,
          "y": 0.0408163265306122,
        },
        Object {
          "x": 1627886220000,
          "y": 0,
        },
        Object {
          "x": 1627886280000,
          "y": 0,
        },
        Object {
          "x": 1627886340000,
          "y": 0.0666666666666667,
        },
        Object {
          "x": 1627886400000,
          "y": 0.0416666666666667,
        },
        Object {
          "x": 1627886460000,
          "y": 0,
        },
        Object {
          "x": 1627886520000,
          "y": 0.0909090909090909,
        },
        Object {
          "x": 1627886580000,
          "y": 0,
        },
        Object {
          "x": 1627886640000,
          "y": 0,
        },
        Object {
          "x": 1627886700000,
          "y": 0.0740740740740741,
        },
        Object {
          "x": 1627886760000,
          "y": 0.0588235294117647,
        },
        Object {
          "x": 1627886820000,
          "y": 0,
        },
        Object {
          "x": 1627886880000,
          "y": 0.05,
        },
        Object {
          "x": 1627886940000,
          "y": 0.0232558139534884,
        },
        Object {
          "x": 1627887000000,
          "y": 0,
        },
        Object {
          "x": 1627887060000,
          "y": 0.0303030303030303,
        },
        Object {
          "x": 1627887120000,
          "y": 0,
        },
        Object {
          "x": 1627887180000,
          "y": 0.0263157894736842,
        },
        Object {
          "x": 1627887240000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1627887300000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1627887360000,
          "y": 0,
        },
        Object {
          "x": 1627887420000,
          "y": 0,
        },
        Object {
          "x": 1627887480000,
          "y": 0.0303030303030303,
        },
        Object {
          "x": 1627887540000,
          "y": 0.0833333333333333,
        },
        Object {
          "x": 1627887600000,
          "y": 0,
        },
        Object {
          "x": 1627887660000,
          "y": 0.05,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627885860000,
          "y": null,
        },
        Object {
          "x": 1627885920000,
          "y": 16826.2,
        },
        Object {
          "x": 1627885980000,
          "y": 11181.9333333333,
        },
        Object {
          "x": 1627886040000,
          "y": 6869,
        },
        Object {
          "x": 1627886100000,
          "y": 15775,
        },
        Object {
          "x": 1627886160000,
          "y": 14656.8823529412,
        },
        Object {
          "x": 1627886220000,
          "y": 13695,
        },
        Object {
          "x": 1627886280000,
          "y": 11881.6666666667,
        },
        Object {
          "x": 1627886340000,
          "y": 54876,
        },
        Object {
          "x": 1627886400000,
          "y": 18301.8571428571,
        },
        Object {
          "x": 1627886460000,
          "y": 12041.6666666667,
        },
        Object {
          "x": 1627886520000,
          "y": 14476.3333333333,
        },
        Object {
          "x": 1627886580000,
          "y": 7716.09090909091,
        },
        Object {
          "x": 1627886640000,
          "y": 13343,
        },
        Object {
          "x": 1627886700000,
          "y": 16689.6666666667,
        },
        Object {
          "x": 1627886760000,
          "y": 9251.57142857143,
        },
        Object {
          "x": 1627886820000,
          "y": 48115.6666666667,
        },
        Object {
          "x": 1627886880000,
          "y": 29247,
        },
        Object {
          "x": 1627886940000,
          "y": 15612.8666666667,
        },
        Object {
          "x": 1627887000000,
          "y": 10279,
        },
        Object {
          "x": 1627887060000,
          "y": 39608.8461538462,
        },
        Object {
          "x": 1627887120000,
          "y": 13255,
        },
        Object {
          "x": 1627887180000,
          "y": 8620.53846153846,
        },
        Object {
          "x": 1627887240000,
          "y": 10015,
        },
        Object {
          "x": 1627887300000,
          "y": 19615,
        },
        Object {
          "x": 1627887360000,
          "y": 19455,
        },
        Object {
          "x": 1627887420000,
          "y": 15950.0588235294,
        },
        Object {
          "x": 1627887480000,
          "y": 17303,
        },
        Object {
          "x": 1627887540000,
          "y": 768897.4,
        },
        Object {
          "x": 1627887600000,
          "y": 12341.1538461538,
        },
        Object {
          "x": 1627887660000,
          "y": 12465.9090909091,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627885860000,
          "y": null,
        },
        Object {
          "x": 1627885920000,
          "y": 0.778068542480469,
        },
        Object {
          "x": 1627885980000,
          "y": 0.778884887695313,
        },
        Object {
          "x": 1627886040000,
          "y": 0.779270172119141,
        },
        Object {
          "x": 1627886100000,
          "y": 0.779457092285156,
        },
        Object {
          "x": 1627886160000,
          "y": 0.780101776123047,
        },
        Object {
          "x": 1627886220000,
          "y": 0.780509948730469,
        },
        Object {
          "x": 1627886280000,
          "y": 0.78082275390625,
        },
        Object {
          "x": 1627886340000,
          "y": 0.781112670898438,
        },
        Object {
          "x": 1627886400000,
          "y": 0.781364440917969,
        },
        Object {
          "x": 1627886460000,
          "y": 0.781959533691406,
        },
        Object {
          "x": 1627886520000,
          "y": 0.782733917236328,
        },
        Object {
          "x": 1627886580000,
          "y": 0.783084869384766,
        },
        Object {
          "x": 1627886640000,
          "y": 0.783279418945313,
        },
        Object {
          "x": 1627886700000,
          "y": 0.783649444580078,
        },
        Object {
          "x": 1627886760000,
          "y": 0.784149169921875,
        },
        Object {
          "x": 1627886820000,
          "y": 0.784351348876953,
        },
        Object {
          "x": 1627886880000,
          "y": 0.784622192382813,
        },
        Object {
          "x": 1627886940000,
          "y": 0.785224914550781,
        },
        Object {
          "x": 1627887000000,
          "y": 0.785545349121094,
        },
        Object {
          "x": 1627887060000,
          "y": 0.785938262939453,
        },
        Object {
          "x": 1627887120000,
          "y": 0.786300659179688,
        },
        Object {
          "x": 1627887180000,
          "y": 0.786895751953125,
        },
        Object {
          "x": 1627887240000,
          "y": 0.787326812744141,
        },
        Object {
          "x": 1627887300000,
          "y": 0.787448883056641,
        },
        Object {
          "x": 1627887360000,
          "y": 0.787872314453125,
        },
        Object {
          "x": 1627887420000,
          "y": 0.788345336914063,
        },
        Object {
          "x": 1627887480000,
          "y": 0.788974761962891,
        },
        Object {
          "x": 1627887540000,
          "y": 0.789325714111328,
        },
        Object {
          "x": 1627887600000,
          "y": 0.789802551269531,
        },
        Object {
          "x": 1627887660000,
          "y": 0.790248870849609,
        },
      ],
      "serviceNodeName": "512388b65878b1ed410e7a85e793878bb4bd6a4e1943db6d12ca12dd4286623a",
      "throughput": Array [
        Object {
          "x": 1627885860000,
          "y": 0,
        },
        Object {
          "x": 1627885920000,
          "y": 31,
        },
        Object {
          "x": 1627885980000,
          "y": 29,
        },
        Object {
          "x": 1627886040000,
          "y": 15,
        },
        Object {
          "x": 1627886100000,
          "y": 14,
        },
        Object {
          "x": 1627886160000,
          "y": 49,
        },
        Object {
          "x": 1627886220000,
          "y": 21,
        },
        Object {
          "x": 1627886280000,
          "y": 28,
        },
        Object {
          "x": 1627886340000,
          "y": 15,
        },
        Object {
          "x": 1627886400000,
          "y": 24,
        },
        Object {
          "x": 1627886460000,
          "y": 36,
        },
        Object {
          "x": 1627886520000,
          "y": 44,
        },
        Object {
          "x": 1627886580000,
          "y": 28,
        },
        Object {
          "x": 1627886640000,
          "y": 14,
        },
        Object {
          "x": 1627886700000,
          "y": 27,
        },
        Object {
          "x": 1627886760000,
          "y": 34,
        },
        Object {
          "x": 1627886820000,
          "y": 31,
        },
        Object {
          "x": 1627886880000,
          "y": 20,
        },
        Object {
          "x": 1627886940000,
          "y": 43,
        },
        Object {
          "x": 1627887000000,
          "y": 25,
        },
        Object {
          "x": 1627887060000,
          "y": 33,
        },
        Object {
          "x": 1627887120000,
          "y": 28,
        },
        Object {
          "x": 1627887180000,
          "y": 38,
        },
        Object {
          "x": 1627887240000,
          "y": 13,
        },
        Object {
          "x": 1627887300000,
          "y": 13,
        },
        Object {
          "x": 1627887360000,
          "y": 13,
        },
        Object {
          "x": 1627887420000,
          "y": 46,
        },
        Object {
          "x": 1627887480000,
          "y": 33,
        },
        Object {
          "x": 1627887540000,
          "y": 24,
        },
        Object {
          "x": 1627887600000,
          "y": 44,
        },
        Object {
          "x": 1627887660000,
          "y": 40,
        },
      ],
    },
  },
  "previousPeriod": Object {},
}
`;
